# vanillapdf.py

./: .gitattributes  .gitignore  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONFIGURATION_GUIDE.txt  CONTRIBUTING.md  MANIFEST.in  PLAN.md  README.md  RELEASE-GUIDE.md  pyproject.toml  requirements.txt  vcpkg-configuration.json  vcpkg.json
.github/: dependabot.yml
.github/sanitizer/: tsan-suppressions.txt
.github/workflows/: bleeding-edge.yml  build-wheels.yml  docs.yml  github-release.yml  lint-pr-title.yml  lint.yml  nightly-check.yml  release.yml  sanitizers.yml  sanity-check.yml
assets/: test-signing-key.pfx
cmake/: vcpkg_init.cmake
docs/: STYLE.md  conf.py  examples.rst  index.rst  installation.rst  overview.rst  quickstart.rst  requirements.txt
docs/api/: documents.rst  files.rst  objects.rst  utils.rst
examples/: README.md  create_document.py  encrypt_document.py  inspect_pages.py  read_metadata.py  sign_document.py  traverse_objects.py  typing_demo.py  verify_signature.py
old/: Pipfile  setup.cfg  setup.py
ports/vanillapdf/: portfile.cmake
repro/: README.md  logging_fd_capture_parse_bug.c  logging_fd_capture_parse_bug.py
scripts/: generate_native_stub.py
scripts/stubgen/: __init__.py  cli.py  model.py  parser.py  pytypes.py  renderer.py  sources.py
src/vanillapdf/: __init__.py  _vanillapdf.pyi  buffer.py  document.py  errors.py  file.py  handle.py  library_info.py  license_info.py  logging.py  misc_utils.py  objects.py  string_object.py  text_string_encoding.py
src/vanillapdf/semantics/: catalog.py  digital_signature.py  document.py  document_encryption_settings.py  document_info.py  document_signature_settings.py  fields.py  interactive_form.py  page_object.py  page_tree.py  rectangle.py
src/vanillapdf/syntax/: file.py  objects.py
src/vanillapdf/utils/: buffer.py  errors.py  library_info.py  license_info.py  logging.py  misc_utils.py  pkcs12_key.py  signature_verifier.py  signing_key.py
src/vanillapdf_c/: documentmodule.c  documentmodule.h  vanillapdfmodule.c
src/vanillapdf_native/: buffermodule.c  buffermodule.cpp  buffermodule.h  common.cpp  common.h  conversion.h  documentmodule.c  documentmodule.cpp  documentmodule.h  errorsmodule.cpp  errorsmodule.h  filemodule.c  filemodule.cpp  filemodule.h  libraryinfomodule.c  libraryinfomodule.cpp  libraryinfomodule.h  licenseinfomodule.cpp  licenseinfomodule.h  loggingmodule.c  loggingmodule.cpp  loggingmodule.h  miscutilsmodule.cpp  miscutilsmodule.h  stringobjectmodule.c  stringobjectmodule.h  text_string_encoding_utils.h  text_string_encodingmodule.c  text_string_encodingmodule.h  vanillapdfmodule.c  vanillapdfmodule.cpp
src/vanillapdf_native/semantics/: catalog.cpp  catalog.h  digital_signature.cpp  digital_signature.h  document.cpp  document.h  document_encryption_settings.cpp  document_encryption_settings.h  document_info.cpp  document_info.h  document_signature_settings.cpp  document_signature_settings.h  fields.cpp  fields.h  interactive_form.cpp  interactive_form.h  page_object.cpp  page_object.h  page_tree.cpp  page_tree.h  rectangle.cpp  rectangle.h
src/vanillapdf_native/syntax/: array_object.cpp  array_object.h  boolean_object.cpp  boolean_object.h  dictionary_object.cpp  dictionary_object.h  file.cpp  file.h  indirect_reference_object.cpp  indirect_reference_object.h  integer_object.cpp  integer_object.h  name_object.cpp  name_object.h  null_object.cpp  null_object.h  object.cpp  object.h  real_object.cpp  real_object.h  stream_object.cpp  stream_object.h  string_object.cpp  string_object.h
src/vanillapdf_native/utils/: buffer.cpp  buffer.h  errors.cpp  errors.h  library_info.cpp  library_info.h  license_info.cpp  license_info.h  logging.cpp  logging.h  misc_utils.cpp  misc_utils.h  pkcs12_key.cpp  pkcs12_key.h  signature_verifier.cpp  signature_verifier.h  signing_key.cpp  signing_key.h
tests/: conftest.py  test_buffer.py  test_document.py  test_encryption.py  test_errors.py  test_file.py  test_library_info.py  test_license_info.py  test_lifecycle.py  test_logging.py  test_misc_utils.py  test_objects.py  test_public_api.py  test_robustness.py  test_semantics.py  test_signing.py  test_string_object.py  test_threading.py  test_traversal.py  test_verification.py  test_write.py
tests/semantics/: test_catalog.py  test_document.py  test_document_encryption_settings.py  test_document_info.py  test_page_object.py  test_page_tree.py  test_rectangle.py
tests/syntax/: test_array_object.py  test_boolean_object.py  test_dictionary_object.py  test_indirect_reference_object.py  test_integer_object.py  test_name_object.py  test_null_object.py  test_object.py  test_real_object.py  test_stream_object.py  test_string_object.py
tests/utils/: test_buffer.py  test_logging.py  test_signature_verifier.py
vcpkg-ports/vanillapdf/: portfile.cmake  usage  vcpkg.json
