[project]
name = "vanillapdf"
dynamic = ["version"]
description = "Python bindings for VanillaPDF — a C++ PDF processing library"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }

authors = [
  { name = "Juraj Zikmund", email = "jzikmund@vanillapdf.com" }
]

maintainers = [
  { name = "Vanilla.PDF Labs" }
]

readme = "README.md"
keywords = ["pdf", "bindings", "c++", "python", "wrapper", "vanillapdf"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Text Processing :: General",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://vanillapdf.com"
Repository = "https://github.com/vanillapdf/vanillapdf"
Documentation = "https://vanillapdf.github.io/vanillapdf"
Issues = "https://github.com/vanillapdf/vanillapdf/issues"

[build-system]
requires = ["scikit-build-core>=0.10", "setuptools>=80", "setuptools-scm>=9"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
build-dir = "build"

[tool.scikit-build.metadata]
version.provider = "scikit_build_core.metadata.setuptools_scm"

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"
version_file = "src/vanillapdf/_version.py"

[tool.scikit-build.cmake]
build-type = "Release"
args = [
  "-DCMAKE_BUILD_TYPE=Release",
  "-DVANILLAPDF_PY_PACKAGE_BUILD=ON"
]

[project.optional-dependencies]
test = ["pytest"]