[project]
name = "vanillapdf"
dynamic = ["version"]
description = "Python bindings for VanillaPDF — a C++ PDF processing library"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }

authors = [
  { name = "Juraj Zikmund", email = "jzikmund@vanillapdf.com" }
]

maintainers = [
  { name = "Vanilla.PDF Labs" }
]

readme = "README.md"
keywords = ["pdf", "bindings", "c++", "python", "wrapper", "vanillapdf"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Text Processing :: General",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://vanillapdf.com"
Repository = "https://github.com/vanillapdf/vanillapdf"
Documentation = "https://vanillapdf-py.readthedocs.io"
Issues = "https://github.com/vanillapdf/vanillapdf/issues"

[build-system]
requires = ["scikit-build-core>=0.10", "setuptools>=80", "setuptools-scm>=9"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
build-dir = "build"

[tool.scikit-build.metadata]
version.provider = "scikit_build_core.metadata.setuptools_scm"

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"
version_file = "src/vanillapdf/_version.py"

[tool.scikit-build.cmake]
build-type = "Release"
args = [
  "-DCMAKE_BUILD_TYPE=Release",
  "-DVANILLAPDF_PY_PACKAGE_BUILD=ON"
]

[project.optional-dependencies]
test = ["pytest"]
lint = ["ruff"]
typecheck = ["pyright"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# importlib mode lets the per-object tests mirror the source tree
# (tests/syntax, tests/semantics, tests/utils) without __init__.py files or
# unique-basename constraints.
addopts = "--import-mode=importlib"

[tool.ruff]
line-length = 100
target-version = "py310"
# _version.py is generated by setuptools-scm; _vanillapdf.pyi is generated by
# scripts/generate_native_stub.py (long signatures); old/ is legacy/archived.
extend-exclude = ["src/vanillapdf/_version.py", "src/vanillapdf/_vanillapdf.pyi", "old"]

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes, I isort, SIM flake8-simplify (incl. SIM117
# multiple-with-statements), UP pyupgrade, B flake8-bugbear.
select = ["E", "F", "I", "SIM", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["vanillapdf"]

[tool.pyright]
include = ["src/vanillapdf"]
# _version.py is generated by setuptools-scm; the native ext is described by
# the committed _vanillapdf.pyi stub (scripts/generate_native_stub.py).
exclude = ["src/vanillapdf/_version.py"]
pythonVersion = "3.10"
typeCheckingMode = "strict"
# The native extension is a compiled module described by _vanillapdf.pyi; there
# is deliberately no Python source behind the stub.
reportMissingModuleSource = false
# The wrapper classes are one internal, cooperating family: factories
# (``_from_handle``) and handle passing (``_handle_of``) legitimately cross
# between sibling wrappers. That is not "private misuse" -- and it is orthogonal
# to the handle-type checking we care about, which stays strict via
# reportArgumentType / reportAssignmentType on the distinct handle types (so a
# wrong handle is a static error rather than a runtime TypeError/PdfError).
reportPrivateUsage = false