[metadata]
name = vanillapdf
version = 0.1.0
author = Your Name
author_email = your.email@example.com
description = Python bindings for VanillaPDF
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0
url = https://github.com/yourusername/vanillapdf-python

[options]
packages = find:
package_dir =
    = src

[options.package_data]
vanillapdf = ["*.so"]

[build_ext]
inplace = 0
